--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "trailingComma": "none",
   "semi": false,
   "singleQuote": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "jsxSingleQuote": true
 }
