--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@types/react-native-snap-carousel": "^3.8.3",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~41.0.1",
     "expo-linking": "~2.2.3",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-navigation-header-buttons": "^7.0.1",
