--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "publish": "expo publish",
+    "apk": "expo build:android -t apk",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
