--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-navigation-header-buttons": "^7.0.1",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
